--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -211,7 +211,7 @@ body{
 }
 
 #landingPage{
-	background-image:url('../img/slide1_bg.jpg'),url('../img/im1.jpg');
+	background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../img/slide1_bg.jpg');
 	background-size: cover !important;
 	background-attachment: scroll;
 	background-repeat: repeat,repeat;
@@ -241,7 +241,7 @@ body{
 
 #academics{
 	position:relative;
-	background-image:url('../img/slide2_bg.jpg');
+	background-image:url('../img2.jpg');
 	background-size: cover !important;
 	background-attachment: fixed !important;
 	width:100%;
@@ -286,7 +286,7 @@ body{
 
 #workExperience{
 	position:relative;
-	background-image:url('../img/slide3_bg.jpg');
+	background-image:url('../img/im2.jpg');
 	background-size: cover !important;
 	background-attachment: fixed !important;
 	width:100%;
