--- a/css/timeline.css
+++ b/css/timeline.css
@@ -50,7 +50,7 @@
             position: relative;
             -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 			background-color:white;
-            box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+            box-shadow: 0 1px 6px 3px rgba(0, 0, 0, 0.175);
         }
 
             .timeline > li > .timeline-panel:before {
@@ -78,8 +78,8 @@
             }
 
         .timeline > li > .timeline-badge {
-            width: 50px;
-            height: 50px;
+            width: 45px;
+            height: 45px;
             line-height: 40px;
             font-size: 1.4em;
             text-align: center;
