--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -230,10 +230,11 @@ body{
 
 #aboutMe{
 	position:relative;
-	background-image:url('../img/aboutMe_bg.jpg');
+	background:linear-gradient(rgba(212, 193, 39, 0.0), rgba(212, 193, 39, 0.0)),url('../img/aboutMe_bg.jpg'),wheat;
 	width:100%;
 	padding: 50px;
 	padding-bottom:100px;
+
 }
 
 #aboutMe h2{
@@ -287,7 +288,7 @@ body{
 
 #workExperience{
 	position:relative;
-	background-image:url('../img/im2.jpg');
+	background:linear-gradient(rgba(0,0,0, 0.05), rgba(0,0,0, 0.05)),url('../img/im2.jpg');
 	background-size: cover !important;
 	background-attachment: fixed !important;
 	width:100%;
