--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -8,6 +8,21 @@ body{
 	padding-top: 50px;
 }
 
+#detail p {
+	    display: block;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+        font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    color: #707070;
+    font-size: 14px;
+    line-height: 24px;
+
+}
+
 /*Loading*/
 #loader .container {
   height: 100vh;
@@ -230,10 +245,10 @@ body{
 
 #aboutMe{
 	position:relative;
-	background:linear-gradient(rgba(212, 193, 39, 0.0), rgba(212, 193, 39, 0.0)),url('../img/aboutMe_bg.jpg'),wheat;
+	background:linear-gradient(rgba(212, 193, 39, 0.1), rgba(212, 193, 39, 0.1)),url('../img/aboutMe_bg.jpg'),wheat;
 	width:100%;
 	padding: 50px;
-	padding-bottom:100px;
+	padding-bottom:60px;
 
 }
 
